// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateNewAppFlow /> Configure backend and check full download until next steps: payload 1`] = `undefined`;

exports[`<CreateNewAppFlow /> Configure backend and check full launch until next steps: payload 1`] = `undefined`;

exports[`<CreateNewAppFlow /> Configure backend with multiple capabilities, launch and check payload: payload 1`] = `undefined`;

exports[`<CreateNewAppFlow /> Configure backend with no capability, launch and check payload: payload 1`] = `undefined`;

exports[`<CreateNewAppFlow /> Configure frontend and backend, launch and check payload: payload 1`] = `
Object {
  "clusterId": "starter-ca-central-1",
  "gitOrganization": "",
  "gitRepository": "my-test-app",
  "project": Object {
    "application": "my-test-app",
    "parts": Array [
      Object {
        "capabilities": Array [
          Object {
            "module": "web-app",
          },
        ],
        "category": "frontend",
        "shared": Object {
          "runtime": Object {
            "name": "react",
            "version": "community",
          },
        },
        "subFolderName": "frontend",
      },
      Object {
        "capabilities": Array [
          Object {
            "module": "health",
            "props": undefined,
          },
          Object {
            "module": "rest",
            "props": undefined,
          },
        ],
        "category": "backend",
        "shared": Object {
          "runtime": Object {
            "name": "react",
            "version": "community",
          },
        },
        "subFolderName": "backend",
      },
      Object {
        "capabilities": Array [
          Object {
            "module": "welcome",
          },
        ],
        "category": "support",
        "subFolderName": "support",
      },
    ],
  },
  "projectName": "my-test-app",
}
`;

exports[`<CreateNewAppFlow /> Configure frontend, launch and check payload: payload 1`] = `
Object {
  "clusterId": "starter-ca-central-1",
  "gitOrganization": "",
  "gitRepository": "my-test-app",
  "project": Object {
    "application": "my-test-app",
    "parts": Array [
      Object {
        "capabilities": Array [
          Object {
            "module": "web-app",
          },
          Object {
            "module": "welcome",
          },
        ],
        "category": "frontend",
        "shared": Object {
          "runtime": Object {
            "name": "react",
            "version": "community",
          },
        },
      },
    ],
  },
  "projectName": "my-test-app",
}
`;
